--- a/docs/style.css
+++ b/docs/style.css
@@ -28,18 +28,27 @@ body {
     }
 
     #desktop-topbar {
-        background-color: white;
+        background-color: #3A3A3A;
         font-size: 1.5rem;
         padding-left: 0.5;
         display: flex;
     }
 
     #desktop-topbar > div {
-        margin-left: 0.5em;
-        margin-right: 0.5em;
         height: 2.5em;
+
         display: flex;
         align-items: center;
+
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+
+        color: #ffffff;
+        background-color: #3A3A3A;
+    }
+
+    #desktop-topbar > div:hover {
+        background-color: #101010;
     }
 }
 
