--- a/docs/style.css
+++ b/docs/style.css
@@ -30,12 +30,11 @@ body {
     #desktop-topbar {
         background-color: #3A3A3A;
         font-size: 1.5rem;
-        padding-left: 0.5;
         display: flex;
     }
 
     #desktop-topbar > div {
-        height: 2.5em;
+        height: 2em;
 
         display: flex;
         align-items: center;
@@ -47,8 +46,8 @@ body {
         background-color: #3A3A3A;
     }
 
-    #desktop-topbar > div:hover {
-        background-color: #101010;
+    .topbar-hover-effect:hover {
+        background-color: #101010 !important;
     }
 }
 
