--- a/docs/style.css
+++ b/docs/style.css
@@ -12,11 +12,17 @@ body {
 }
 
 #mobile-topbar {
+    background-color: #3A3A3A;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#mobile-topbar > div {
     height: 2em;
 
     display: flex;
     align-items: center;
-    justify-content: space-between  ;
 
     padding-left: 0.5em;
     padding-right: 0.5em;
@@ -30,6 +36,7 @@ body {
 #logo-image {
     height: 1.5em;
     width: auto;
+    border-radius: 5px;
 }
 
 #desktop-topbar {
